# hse-engineering-practices

./: README.md
ep_hw1/: README.md  lintning.md  pyproject.toml  requirements.txt
ep_hw1/ep_hw1/: life_game.py  life_game_initial.py
ep_hw2/: README.md  dataset.csv
ep_hw3/: README.md  pipeline.py
ep_hw3/data/: data.csv  data_processed.csv
ep_hw3/models/: clf.pkl
ep_hw3/results/: results.pkl
ep_hw3/utils/: preprocessing.py  training.py
